Disable an animation when view is not visible to fix CPU spike

--- a/Resources/Styles/Styles/Astria/design.css
+++ b/Resources/Styles/Styles/Astria/design.css
@@ -244,6 +244,10 @@ div[id=mark] {
 	opacity: 1.0;
 }
 
+#historic_messages.notransition {
+	transition: none;
+}
+
 /* NOTICE/CTCP/WALLOPS */
 
 body div.line[ltype*=ctcp],
