--- a/Resources/Styles/Styles/Sapientia/design.css
+++ b/Resources/Styles/Styles/Sapientia/design.css
@@ -243,6 +243,10 @@ div[id=mark] {
 	opacity: 1.0;
 }
 
+#historic_messages.notransition {
+	transition: none;
+}
+
 /* NOTICE/CTCP/WALLOPS */
 
 body div.line[ltype*=ctcp],
