--- a/Resources/Styles/Styles/Tomorrow Night (Eighties)/design.css
+++ b/Resources/Styles/Styles/Tomorrow Night (Eighties)/design.css
@@ -250,6 +250,10 @@ div[id=mark] {
 	opacity: 1.0;
 }
 
+#historic_messages.notransition {
+	transition: none;
+}
+
 /* @end */
 
 /* @group NOTICE / CTCP / WALLOPS */
